feat: create second stage Web Quiz Engine
Create functionality for creating, querying and answering quizzes.

--- a/Web Quiz Engine (Kotlin)/task/src/resources/application.properties
+++ b/Web Quiz Engine (Kotlin)/task/src/resources/application.properties
@@ -2,3 +2,4 @@ server.port=8889
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 server.servlet.context-path=/api
+server.error.include-message=on_param
